# MediAssist

./: .env.example  .env.test  .gitignore  ARCHITECTURE.md  DIAGRAMS.md  EXAMPLES.md  MediAssist_MultiAgent_Guide.md  OPENAPI_GUIDE.md  OPENAPI_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  TOKEN_OPTIMIZATION.md  USAGE.md  dashboard_start.sh  openapi.yaml  package.json  pharmacy_sim_generate.py  pyproject.toml  setup.sh
chat_history/: anonymous.json
chat_logs/: anonymous_2025-12-14.jsonl  anonymous_2025-12-15.jsonl
src/: app.ts  config.py  graph.py  server.ts  state.py
src/agent/: accuracy_check.py  agent.prompt.ts  agent.service.ts  agent.types.ts  clinical_validation.py  counseling.py  dispensing.py  intake.py  inventory.py  orderSessionManager.ts  preparation.py  records.py  supervisor.py
src/api/: agent.controller.ts  main.py  schemas.py
src/config/: env.ts  gemini.ts
src/database/: __init__.py  connection.py  patient_db.py  patient_db_schema.sql
src/domain/: drug.entity.ts  drug.mapper.ts
src/evaluation/: clinical_eval.py  ragas_eval.py  test_cases.py
src/observability/: langsmith.py  logging.py  metrics.py
src/tools/: drug_database.py  drug_database_openfda.py  inventory.tool.ts  inventory_db.py  listOrders.tool.ts  openfda.tool.ts  order.tool.ts  orderStatus.tool.ts  patient_db.py  regulatory.py  vision.py  vision_service.py
src/utilities/: __init__.py  timeout.py
src/utils/: chatLogger.ts  logger.ts  normalizeDrugName.ts
static/: index.html
static/css/: style.css
static/js/: api.js  app.js
test_payloads/: README.md  happypath.json  highrisk.json  minimal.json
tests/integration_tests/: test_real_data_integration.py
(+38 files in other folders)
